index.css
body,
html {
  background: transparent;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
    Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
}

h1,
h2 {
  font-weight: normal;
  font-size: inherit;
  padding: 0;
  margin: 0;
}

.App {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;
  background: #eee;
  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.5);
}

.App-Entries {
  overflow: hidden;
  overflow-x: scroll;
  display: grid;
  grid-gap: 12px;
  grid-auto-columns: 1fr;
}

.Entry:first-child {
  margin-left: 24px;
}

.Entry:last-child {
  margin-right: 36px;
}

.Entry {
  grid-row: 1;
  overflow: hidden;
  display: flex;
  height: 220px;
  width: 220px;
  margin: 12px 0;
  border-radius: 5px;
  background: white;
  box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.2);
  flex-shrink: 0;
  display: flex;
  flex-direction: column;
  border: 1px solid rgba(0, 0, 0, 0.2);
  position: relative;
}

.Entry header {
  display: flex;
  flex-direction: column;
  background: #fff200;
  border-bottom: 1px solid #d4c902;
  padding: 12px;
}

.Entry header h1 {
  font-size: 20px;
  text-transform: capitalize;
}

.Entry header h2 {
  font-size: 12px;
  text-transform: capitalize;
}

.Entry > div {
  padding: 12px;
}

.Entry[data-is-selected='true']::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border: 3px solid blue;
  transition: border 250ms ease;
}

